2009-02-14  Michal Ludvig  <michal@logix.cz>

	* README: Updated for 0.9.9
	* s3cmd, S3/PkgInfo.py, s3cmd.1: Replaced project 
	  URLs with http://s3tools.org
	* NEWS: Improved message.

2009-02-12  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Added --list-md5 for 'ls' command.
	* S3/Config.py: New setting list_md5

2009-02-12  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Set Content-Length header for requests with 'body'.
	* s3cmd: And send it for requests with no body as well...

2009-02-02  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-rc3
	  --------------------------

	* S3/PkgInfo.py, NEWS: Updated for 0.9.9-rc3

2009-02-01  Michal Ludvig  <michal@logix.cz>

	* S3/Exceptions.py: Correct S3Exception.__str__() to
	  avoid crash in S3Error() subclass. Reported by '~t2~'.
	* NEWS: Updated.

2009-01-30  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-rc2
	  --------------------------

	* S3/PkgInfo.py, NEWS, TODO: Updated for 0.9.9-rc2

2009-01-30  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Under some circumstance s3cmd crashed
	  when put/get/sync had 0 files to transmit. Fixed now.

2009-01-28  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Output 'delete:' in --dry-run only when
	  used together with --delete-removed. Otherwise
	  the user will think that without --dry-run it
	  would really delete the files.

2009-01-27  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-rc1
	  --------------------------

	* S3/PkgInfo.py, NEWS, TODO: Updated for 0.9.9-rc1

2009-01-26  Michal Ludvig  <michal@logix.cz>

	* Merged CloudFront support from branches/s3cmd-airlock
	  See the ChangeLog in that branch for details.

2009-01-25  W. Tell  <w_tell -at- sourceforge>

	* s3cmd: Implemented --include and friends.

2009-01-25  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Enabled --dry-run and --exclude for 'put' and 'get'.
	* S3/Exceptions.py: Remove DeprecationWarning about 
	  BaseException.message in Python 2.6